--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
     <div class="contact-container">
       <div class="contact-info glass-card">
         <h3><i class="fas fa-paper-plane"></i> Drop a line</h3>
-        <div class="info-line"><i class="fas fa-envelope"></i> azad.dhama@devfolio.pro</div>
-        <div class="info-line"><i class="fas fa-phone-alt"></i> +91 98765 43210</div>
+        <div class="info-line"><i class="fas fa-envelope"></i>aajaddhama44@gmail.com</div>
+        <div class="info-line"><i class="fas fa-phone-alt"></i> +91XXXXXXXXXX</div>
         <div class="social-links-big">
           <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
           <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
@@ -497,4 +497,5 @@
 
   <script type="module" src="logic.js"></script>
 </body>
+
 </html>
